// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts page should render correctly with a few contracts 1`] = `
<Card>
  <div
    style={
      Object {
        "display": "grid",
        "gridTemplateColumns": "min-content auto min-content max-content",
      }
    }
  >
    <FilterComponent
      filterListParentId="filter-list"
      filters={
        Array [
          Object {
            "getComponent": [Function],
            "name": "Name",
          },
        ]
      }
      onChange={[Function]}
    />
    <span />
    <Button
      isDisabled={false}
      onClick={[Function]}
    >
      Add
    </Button>
    <Pagination
      className=""
      dropDirection="down"
      itemCount={2}
      itemsEnd={null}
      itemsStart={null}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "items",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Select",
          "pages": "pages",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="top"
      widgetId="pagination-options-menu-top"
    />
  </div>
  <Table
    borders={true}
    caption="Contracts"
    cells={
      Array [
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Name",
          "transforms": Array [
            [Function],
          ],
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Day",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Week",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Month",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Year",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "",
          "transforms": undefined,
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    onSort={[Function]}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "title": <EditableComponent
                editor={
                  <TextInput
                    aria-label="Name"
                    className=""
                    defaultValue="Contract 1"
                    isDisabled={false}
                    isReadOnly={false}
                    isRequired={false}
                    isValid={true}
                    name="name"
                    onChange={[Function]}
                    type="text"
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    Contract 1
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={null}
                    isValid={[Function]}
                    label="Max minutes per day"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={<Text />}
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={null}
                    isValid={[Function]}
                    label="Max minutes per week"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={<Text />}
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={null}
                    isValid={[Function]}
                    label="Max minutes per month"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={<Text />}
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={null}
                    isValid={[Function]}
                    label="Max minutes per year"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={<Text />}
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <span>
                    <Button
                      aria-label="Save"
                      onClick={[Function]}
                      variant="link"
                    >
                      <SaveIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                    <Button
                      aria-label="Cancel"
                      onClick={[Function]}
                      variant="link"
                    >
                      <CloseIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                  </span>
                }
                isEditing={false}
                viewer={
                  <span>
                    <Button
                      aria-label="Edit"
                      onClick={[Function]}
                      variant="link"
                    >
                      <EditIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                    <Button
                      aria-label="Delete"
                      onClick={[Function]}
                      variant="link"
                    >
                      <TrashIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                  </span>
                }
              />,
            },
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <EditableComponent
                editor={
                  <TextInput
                    aria-label="Name"
                    className=""
                    defaultValue="Contract 2"
                    isDisabled={false}
                    isReadOnly={false}
                    isRequired={false}
                    isValid={true}
                    name="name"
                    onChange={[Function]}
                    type="text"
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    Contract 2
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={1}
                    isValid={[Function]}
                    label="Max minutes per day"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    1
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={null}
                    isValid={[Function]}
                    label="Max minutes per week"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={<Text />}
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={10}
                    isValid={[Function]}
                    label="Max minutes per month"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    10
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <OptionalInput
                    defaultValue={120}
                    isValid={[Function]}
                    label="Max minutes per year"
                    onChange={[Function]}
                    valueMapper={[Function]}
                    valueToString={[Function]}
                  />
                }
                isEditing={false}
                viewer={
                  <Text>
                    120
                  </Text>
                }
              />,
            },
            Object {
              "title": <EditableComponent
                editor={
                  <span>
                    <Button
                      aria-label="Save"
                      onClick={[Function]}
                      variant="link"
                    >
                      <SaveIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                    <Button
                      aria-label="Cancel"
                      onClick={[Function]}
                      variant="link"
                    >
                      <CloseIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                  </span>
                }
                isEditing={false}
                viewer={
                  <span>
                    <Button
                      aria-label="Edit"
                      onClick={[Function]}
                      variant="link"
                    >
                      <EditIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                    <Button
                      aria-label="Delete"
                      onClick={[Function]}
                      variant="link"
                    >
                      <TrashIcon
                        color="currentColor"
                        size="sm"
                        title={null}
                      />
                    </Button>
                  </span>
                }
              />,
            },
          ],
        },
      ]
    }
    sortBy={Object {}}
    variant={null}
  >
    <TableHeader
      className=""
    />
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Card>
`;

exports[`Contracts page should render correctly with no contracts 1`] = `
<Card>
  <div
    style={
      Object {
        "display": "grid",
        "gridTemplateColumns": "min-content auto min-content max-content",
      }
    }
  >
    <FilterComponent
      filterListParentId="filter-list"
      filters={
        Array [
          Object {
            "getComponent": [Function],
            "name": "Name",
          },
        ]
      }
      onChange={[Function]}
    />
    <span />
    <Button
      isDisabled={false}
      onClick={[Function]}
    >
      Add
    </Button>
    <Pagination
      className=""
      dropDirection="down"
      itemCount={0}
      itemsEnd={null}
      itemsStart={null}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      page={1}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "items",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Select",
          "pages": "pages",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="top"
      widgetId="pagination-options-menu-top"
    />
  </div>
  <Table
    borders={true}
    caption="Contracts"
    cells={
      Array [
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Name",
          "transforms": Array [
            [Function],
          ],
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Day",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Week",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Month",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "Max Hours Per Year",
          "transforms": undefined,
        },
        Object {
          "cellTransforms": Array [
            [Function],
          ],
          "props": Object {},
          "title": "",
          "transforms": undefined,
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    onSort={[Function]}
    role="grid"
    rowLabeledBy="simple-node"
    rows={Array []}
    sortBy={Object {}}
    variant={null}
  >
    <TableHeader
      className=""
    />
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Card>
`;

exports[`Contracts page should render the editor correctly 1`] = `
<tr>
  <td
    key="0"
  >
    <TextInput
      aria-label="Name"
      className=""
      defaultValue="Contract 2"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      key="0"
      name="name"
      onChange={[Function]}
      type="text"
    />
  </td>
  <td
    key="1"
  >
    <OptionalInput
      defaultValue={1}
      isValid={[Function]}
      key="1"
      label="Max minutes per day"
      onChange={[Function]}
      valueMapper={[Function]}
      valueToString={[Function]}
    />
  </td>
  <td
    key="2"
  >
    <OptionalInput
      defaultValue={null}
      isValid={[Function]}
      key="2"
      label="Max minutes per week"
      onChange={[Function]}
      valueMapper={[Function]}
      valueToString={[Function]}
    />
  </td>
  <td
    key="3"
  >
    <OptionalInput
      defaultValue={10}
      isValid={[Function]}
      key="3"
      label="Max minutes per month"
      onChange={[Function]}
      valueMapper={[Function]}
      valueToString={[Function]}
    />
  </td>
  <td
    key="4"
  >
    <OptionalInput
      defaultValue={120}
      isValid={[Function]}
      key="4"
      label="Max minutes per year"
      onChange={[Function]}
      valueMapper={[Function]}
      valueToString={[Function]}
    />
  </td>
</tr>
`;

exports[`Contracts page should render the viewer correctly 1`] = `
<tr>
  <td
    key="0"
  >
    <Text
      key="0"
    >
      Contract 2
    </Text>
  </td>
  <td
    key="1"
  >
    <Text
      key="1"
    >
      1
    </Text>
  </td>
  <td
    key="2"
  >
    <Text
      key="2"
    />
  </td>
  <td
    key="3"
  >
    <Text
      key="3"
    >
      10
    </Text>
  </td>
  <td
    key="4"
  >
    <Text
      key="4"
    >
      120
    </Text>
  </td>
</tr>
`;
